更新 Additions 文件

--- a/addons/Additions/Hydrogen Skyblock Addition Items/data/items/hsadd-ingotyunxi.json
+++ b/addons/Additions/Hydrogen Skyblock Addition Items/data/items/hsadd-ingotyunxi.json
@@ -1,6 +1,5 @@
 {
-  "name": "§eStarsteel Ingot",
-  "shines": true,
+  "name": "§dYunXi Ingot",
   "is_beacon_payment": true,
   "type": "additions:simple"
 }
